# 2uv

./: README.md  pyproject.toml
src/touv/: main.py  poetry.py
