[project]
name = "2uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Niklas Rosenstein", email = "niklas.rosenstein@helsing.ai" }
]
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "tomli-w>=1.1.0",
    "tomli>=2.2.1",
    "typer>=0.15.1",
]

[project.scripts]
2uv = "touv.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/touv"]

[tool.ruff]
line-length = 120
